nice route details